# work

./: .gitignore  CMakeLists.txt  astyle-options  gen.sh  githook-astyle.sh
boost_examples/: CMakeLists.txt
boost_examples/algorithm/: CMakeLists.txt
boost_examples/format/: CMakeLists.txt  sample_formats.cpp
boost_examples/preprocessor/: CMakeLists.txt  catch_builtin.cpp
boost_examples/property_tree/: CMakeLists.txt  custom_data_type.cpp  debug_settings.xml
boost_examples/regex/: CMakeLists.txt  boost_regex_match.cpp
boost_examples/scope_exit/: CMakeLists.txt  world.cpp  world_checkpoint_all.cpp
boost_examples/spirit/: CMakeLists.txt  parse_phrase.cpp
c++/: CMakeLists.txt
c++/boost/: CMakeLists.txt
c++/boost/algorithm/: CMakeLists.txt  clamp.cpp  copy_if.cpp  copy_while.cpp  gather.cpp  hex_unhex.cpp
c++/boost/circular_buffer/: CMakeLists.txt  circular_buffer.cpp
c++/boost/msm/: CMakeLists.txt  composite.cpp  simple.cpp
c++/boost/property_tree/: CMakeLists.txt  debug_settings.cpp  json.cpp
c++/boost/range/: CMakeLists.txt  adaptors.cpp  algorithms.cpp
c++/boost/regex/: CMakeLists.txt  regex_match.cpp  regex_search.cpp
c++/boost/scope_exit/: CMakeLists.txt  world_this.cpp
c++/boost/spirit/: CMakeLists.txt  grammar.cpp  nesting_rules.cpp  parse_comma_separated_ints.cpp  parse_digit.cpp  parse_digits.cpp  parse_ip.cpp  parse_phrase.cpp  parse_with_actions.cpp  rule.cpp
c++/boost/string_algo/: CMakeLists.txt  case_conv.cpp  join.cpp  replace_all.cpp  split.cpp  trim.cpp
c++/boost/tokenizer/: CMakeLists.txt  char_sep_example_1.cpp
c++/std/: CMakeLists.txt
c/apache/: build.sh  clean.sh  configure.sh
config/: astyle-options  githook-astyle.sh
docker/: README.md
py/language/: private_protected.py
python/language/: generators.py  inheritance.py
python/util/: findReplace.py
sim/: CMakeLists.txt  main.cpp
sim/engine/: CMakeLists.txt  CSimEngine.cpp  CSimEngine.hpp
sim/interface/: IAction.hpp  IActionVisitor.hpp  ISimCaller.hpp  ISimEngine.hpp  ISimSetter.hpp
sim/parser/: CActions.cpp  CActions.hpp  CMakeLists.txt  CScenParser.cpp  CScenParser.hpp
sim/scen/: language.xml
sim/stubs/: CCallStub.cpp  CCallStub.hpp  CMakeLists.txt  CSetStub.cpp  CSetStub.hpp
(+30 files in other folders)
