add_subdirectory (algorithm)
add_subdirectory (circular_buffer)
add_subdirectory (format)
add_subdirectory (msm)
add_subdirectory (preprocessor)
add_subdirectory (property_tree)
add_subdirectory (range)
add_subdirectory (regex)
add_subdirectory (scope_exit)
add_subdirectory (spirit)
add_subdirectory (string_algo)
add_subdirectory (tokenizer)